# esbuild-py

./: .gitignore  LICENSE  MANIFEST.in  README.md  esbuild_bindings.go  esbuild_bindings_wasm.go  go.mod  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml  test.yml
esbuild_py/: .gitignore  MANIFEST.in  esbuild.go  esbuild.py  export.go  go.sum  setup.py
pyext/: checksig.go  export.go
scripts/: cibw_linux_before_all.sh  esbuild_py_demo.ipynb
src/esbuild_py/: __init__.py  esbuild.py
tests/: test_build.py  test_transform.py
