[build-system]
requires        = ['setuptools>=61.0']
build-backend   = 'setuptools.build_meta'

[project]
name = "esbuild_py"
version = "0.1.0"
authors = [
  { name="Mark Keller", email="mark_keller@hms.harvard.edu" },
]
description = ""
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
keywords = ["ipython", "jupyter", "widgets"]
classifiers = [
  'Development Status :: 4 - Beta',
  'Framework :: IPython',
  'Intended Audience :: Developers',
  'Intended Audience :: Science/Research',
  'Topic :: Multimedia :: Graphics',
  'Programming Language :: Python :: 3.7',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
]

# https://stackoverflow.com/questions/74409966/how-to-replace-setup-py-with-a-pyproject-toml-for-a-native-c-build-dependency
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]